# FOMPS

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Deploy-Worker.bat  MOD_DESIGN.md  README.md  Run-OpenMPSync.bat  pyproject.toml  run_fomps.py
.github/: FUNDING.yml
mod/: README.md
mod/FOMPS/: FOMPS.uplugin
mod/FOMPS/Content/: FOMPS.uasset  WBP_FOMPS.uasset
mod/FOMPS/Source/FOMPS/: FOMPS.Build.cs
mod/FOMPS/Source/FOMPS/Private/: FOMPSModule.cpp  FOMPSSubsystem.cpp
mod/FOMPS/Source/FOMPS/Public/: FOMPSSubsystem.h
openmpsync/: __init__.py  cli.py  locate.py  remote.py  saveinfo.py  store.py  webapp.py
openmpsync/web/: index.html
server/: Dockerfile  app.py  requirements.txt
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
